--- a/contact.html
+++ b/contact.html
@@ -17,26 +17,26 @@
     </head>
     <body>
       <div class = "container">
-         <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
+         <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
+         <h1 class = "align-center">CIARAN GRAVESTOCK</h1>
          <div>
            <nav>
-           <ul class = "nav-bar">
-             <li>
-               <a href="about.html"><strong>About</strong></a>
-             </li>
-             <span class="nav-link-style">
-             <li>
-               <a href="photography.html"><strong>Photography</strong></a>
-             </li>
-             <li>
-               <a href="videography.html"><strong>Videography</strong></a>
-             </li>
-             </span>
-             <li>
-               <a href="contact.html"><strong>Contact</strong></a>
-             </li>
-           </ul>
+             <ul class = "nav-bar">
+               <li>
+                 <a href="about.html"><strong>About</strong></a>
+               </li>
+               <span class="nav-link-style">
+               <li>
+                 <a href="photography.html"><strong>Photography</strong></a>
+               </li>
+               <li>
+                 <a href="videography.html"><strong>Videography</strong></a>
+               </li>
+               </span>
+               <li>
+                 <a href="contact.html"><strong>Contact</strong></a>
+               </li>
+             </ul>
          </nav>
         </div>
         <div id = "socials">
@@ -50,11 +50,24 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div class = "iframe-container">
-           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/391609990"
-             style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-           </div>
+         <div>
+           <p class = "align-center">Thank you for checking out my work!</p>
+           <p class = "align-center">Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the forum below or use my socials to contact.</p>
          </div>
+         <div class = "row">
+           <div class = "col-md-6 align-center">
+             <label id="name-label" for="name">First Name<span class="mandatory">*</span></label><br>
+             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
+           </div>
+           <div class = "col-md-6 align-center">
+             <label id="name-label" for="name">Last Name<span class="mandatory">*</span></label><br>
+             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
+          </div>
+          </div>
+          <div>
+            <label id="comments">Any additional comments or suggestions?</label><br>
+            <textarea type="text" placeholder="Enter your comments here....."></textarea><br>
+          </div>
       </div>
     </body>
 </html>
