--- a/videography.html
+++ b/videography.html
@@ -17,26 +17,26 @@
     </head>
     <body>
       <div class = "container">
-         <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
+         <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
+         <h1 class = "align-center">CIARAN GRAVESTOCK</h1>
          <div>
            <nav>
-           <ul class = "nav-bar">
-             <li>
-               <a href="about.html"><strong>About</strong></a>
-             </li>
-             <span class="nav-link-style">
-             <li>
-               <a href="photography.html"><strong>Photography</strong></a>
-             </li>
-             <li>
-               <a href="videography.html"><strong>Videography</strong></a>
-             </li>
-             </span>
-             <li>
-               <a href="contact.html"><strong>Contact</strong></a>
-             </li>
-           </ul>
+             <ul class = "nav-bar">
+               <li>
+                 <a href="about.html"><strong>About</strong></a>
+               </li>
+               <span class="nav-link-style">
+               <li>
+                 <a href="photography.html"><strong>Photography</strong></a>
+               </li>
+               <li>
+                 <a href="videography.html"><strong>Videography</strong></a>
+               </li>
+               </span>
+               <li>
+                 <a href="contact.html"><strong>Contact</strong></a>
+               </li>
+             </ul>
          </nav>
         </div>
         <div id = "socials">
@@ -50,11 +50,26 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div class = "iframe-container">
-           <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/391609990"
-             style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+         <div class = "row">
+           <div class = "col-md-6">
+             <div class = "block-filler2">
+             </div>
            </div>
-         </div>
+           <div class = "col-md-6">
+             <div class = "block-filler2">
+             </div>
+           </div>
+          </div>
+          <div class = "row">
+            <div class = "col-md-6">
+              <div class = "block-filler2">
+              </div>
+            </div>
+            <div class = "col-md-6">
+              <div class = "block-filler2">
+              </div>
+            </div>
+           </div>
       </div>
     </body>
 </html>
