--- a/photography.html
+++ b/photography.html
@@ -51,7 +51,7 @@
            </a>
          </div>
          <div>
-           <p>Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
+           <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
          </div>
          <div class = "row">
            <div class = "col-md-3 block-filler">
