--- a/photography.html
+++ b/photography.html
@@ -39,6 +39,22 @@
              </ul>
          </nav>
         </div>
+        <div id = "sub-nav">
+          <ul class = "nav-bar">
+            <li>
+              <a href="events.html"><strong>Events</strong></a>
+            </li>
+            <li>
+              <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
+            </li>
+            <li>
+              <a href="sub_nav/nature.html"><strong>Nature</strong></a>
+            </li>
+            <li>
+              <a href="photography.html"><strong>Widlife</strong></a>
+            </li>
+          </ul>
+        </div>
         <div id = "socials">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
@@ -53,16 +69,7 @@
          <div>
            <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
          </div>
-         <div class = "row">
-           <div class = "col-md-3 block-filler">
-           </div>
-           <div class = "col-md-6">
-             <div class = "block-filler2">
-             </div>
-           </div>
-           <div class = "col-md-3 block-filler">
-           </div>
-          </div>
+
       </div>
     </body>
 </html>
