--- a/sub_nav/wildlife.html
+++ b/sub_nav/wildlife.html
@@ -37,8 +37,23 @@
                  <a href="contact.html"><strong>Contact</strong></a>
                </li>
              </ul>
-             </ul>
          </nav>
+        </div>
+        <div id = "sub-nav">
+          <ul class = "nav-bar">
+            <li>
+              <a href="events.html"><strong>Events</strong></a>
+            </li>
+            <li>
+              <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
+            </li>
+            <li>
+              <a href="sub_nav/nature.html"><strong>Nature</strong></a>
+            </li>
+            <li>
+              <a href="photography.html"><strong>Widlife</strong></a>
+            </li>
+          </ul>
         </div>
         <div id = "socials">
            <a href="https://vimeo.com/user65399121" target="_blank">
@@ -52,22 +67,15 @@
            </a>
          </div>
          <div>
-           <p class = "align-center">Thank you for checking out my work!</p>
-           <p class = "align-center">Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the forum below or use my socials to contact.</p>
+           <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
          </div>
          <div class = "row">
-           <div class = "col-md-6 align-center">
-             <label id="name-label" for="name">First Name<span class="mandatory">*</span></label><br>
-             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
+           <div class = "col-md-4">
+             <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" border="0" />
            </div>
-           <div class = "col-md-6 align-center">
-             <label id="name-label" for="name">Last Name<span class="mandatory">*</span></label><br>
-             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
-          </div>
-          </div>
-          <div>
-            <label id="comments">Any additional comments or suggestions?</label><br>
-            <textarea type="text" placeholder="Enter your comments here....."></textarea><br>
+           <div class = "col-md-8">
+             <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" border="0" />
+           </div>
           </div>
       </div>
     </body>
