--- a/sub_nav/nature.html
+++ b/sub_nav/nature.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-      <link rel ="stylesheet" href ="main.css">
+      <link rel ="stylesheet" href ="../main.css">
     </head>
     <body>
       <div class = "container">
@@ -37,8 +37,23 @@
                  <a href="contact.html"><strong>Contact</strong></a>
                </li>
              </ul>
-             </ul>
          </nav>
+        </div>
+        <div id = "sub-nav">
+          <ul class = "nav-bar">
+            <li>
+              <a href="events.html"><strong>Events</strong></a>
+            </li>
+            <li>
+              <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
+            </li>
+            <li>
+              <a href="sub_nav/nature.html"><strong>Nature</strong></a>
+            </li>
+            <li>
+              <a href="photography.html"><strong>Widlife</strong></a>
+            </li>
+          </ul>
         </div>
         <div id = "socials">
            <a href="https://vimeo.com/user65399121" target="_blank">
@@ -52,23 +67,9 @@
            </a>
          </div>
          <div>
-           <p class = "align-center">Thank you for checking out my work!</p>
-           <p class = "align-center">Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the forum below or use my socials to contact.</p>
+           <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
          </div>
-         <div class = "row">
-           <div class = "col-md-6 align-center">
-             <label id="name-label" for="name">First Name<span class="mandatory">*</span></label><br>
-             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
-           </div>
-           <div class = "col-md-6 align-center">
-             <label id="name-label" for="name">Last Name<span class="mandatory">*</span></label><br>
-             <input id="name" type="text" name="full_name" placeholder="Enter your name here" required/>
-          </div>
-          </div>
-          <div>
-            <label id="comments">Any additional comments or suggestions?</label><br>
-            <textarea type="text" placeholder="Enter your comments here....."></textarea><br>
-          </div>
+
       </div>
     </body>
 </html>
