--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
       <link rel ="stylesheet" href ="main.css">
     </head>
     <body>
-      <div class = "container">
+      <div class = "container-fluid">
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center">CIARAN GRAVESTOCK</h1>
+         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
          <div>
            <nav>
              <ul class = "nav-bar">
@@ -50,22 +50,24 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div class = "row">
-           <div class = "col-md-4 block-filler">
+         <div class = "main-container">
+           <div class = "row">
+             <div class = "col-md-4 block-filler">
 
-           </div>
-           <div class = "col-md-8">
-             <p class = "para">In 2017 I first worked on a short film production as a runner. Despite making teas and coffees, feeling the working atmosphere and seeing how a final film
+             </div>
+             <div class = "col-md-8">
+               <p class = "para">In 2017 I first worked on a short film production as a runner. Despite making teas and coffees, feeling the working atmosphere and seeing how a final film
                 is made, I soon quickly realised this is the industry I want to get into. To kickstart my career, I took a film and television course at college.  While carrying
                 on freelance work, I studied hard to learn the theory and practical skills I will need in the future. I quickly honed in what was most passionate to me; photography
                 and videography. Going further into studies, after college I would attend Birmingham City University, undergoing a bachelor of science degree in film production.
-             </p>
-             <p class = "para">
+              </p>
+              <p class = "para">
                 While many people within the media industry specialise in a couple of career paths, I prefer to be diverse and adaptable. The range of work I’ve filmed, photographed
                 or help create allows me to express my love and dedication to this creative industry, with always giving my best in everything I do.
-             </p>
+              </p>
+            </div>
           </div>
-          </div>
+        </div>
       </div>
     </body>
 </html>
