--- a/videography.html
+++ b/videography.html
@@ -16,9 +16,9 @@
       <link rel ="stylesheet" href ="main.css">
     </head>
     <body>
-      <div class = "container">
+      <div class = "container-fluid">
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center">CIARAN GRAVESTOCK</h1>
+         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
          <div>
            <nav>
              <ul class = "nav-bar">
@@ -50,26 +50,16 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div class = "row">
-           <div class = "col-md-6">
-             <div class = "block-filler2">
-             </div>
-           </div>
-           <div class = "col-md-6">
-             <div class = "block-filler2">
-             </div>
-           </div>
+         <div class = "main-container">
+            <div id = "left_frame" style="padding:25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/391609990"
+              style="position:absolute;top:0;left:0;width:100%;height:100%;"
+              frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
+            <div id = "left_frame" style="padding:25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/391609990"
+              style="position:absolute;top:0;left:0;width:100%;height:100%;"
+              frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
           </div>
-          <div class = "row">
-            <div class = "col-md-6">
-              <div class = "block-filler2">
-              </div>
-            </div>
-            <div class = "col-md-6">
-              <div class = "block-filler2">
-              </div>
-            </div>
-           </div>
       </div>
     </body>
 </html>
