--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <link rel ="stylesheet" href ="main.css">
     </head>
     <body>
-      <div class = "container">
+      <div class = "container-fluid">
          <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
          <div>
@@ -50,7 +50,8 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div class = "iframe-container">
+        </div>
+         <div class = "main-container">
            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/391609990"
              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
            </div>
