--- a/photography.html
+++ b/photography.html
@@ -18,7 +18,7 @@
     <body>
       <div class = "container">
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center">CIARAN GRAVESTOCK</h1>
+         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
          <div>
            <nav>
              <ul class = "nav-bar">
