--- a/photography.html
+++ b/photography.html
@@ -16,7 +16,7 @@
       <link rel ="stylesheet" href ="main.css">
     </head>
     <body>
-      <div class = "container">
+      <div class = "container-fluid">
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
          <div>
@@ -42,7 +42,7 @@
         <div id = "sub-nav">
           <ul class = "nav-bar">
             <li>
-              <a href="events.html"><strong>Events</strong></a>
+              <a href="sub_nav/events.html"><strong>Events</strong></a>
             </li>
             <li>
               <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
@@ -66,10 +66,47 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div>
+         <div class = "main-container">
            <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
-         </div>
+           <div class="row">
 
-      </div>
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-12 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" class="img-fluid mb-4" alt="">
+
+               <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.3s">
+
+             </div>
+             <!--Grid column-->
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-6 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQPjm.jpg" alt="jSQPjm.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.1s">
+
+               <img src="https://i1.lensdump.com/i/jSQotK.jpg" alt="jSQotK.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.4s">
+
+             </div>
+             <!--Grid column-->
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-6 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQuKZ.jpg" alt="jSQuKZ.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.2s">
+
+               <img src="https://i1.lensdump.com/i/jSQDPP.jpg" alt="jSQDPP.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.5s">
+
+             </div>
+             <!--Grid column-->
+
+           </div>
+         </div>
+       </div>
     </body>
 </html>
