--- a/sub_nav/events.html
+++ b/sub_nav/events.html
@@ -13,28 +13,28 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
-      <link rel ="stylesheet" href ="main.css">
+      <link rel ="stylesheet" href ="../main.css">
     </head>
     <body>
-      <div class = "container">
-         <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
+      <div class = "container-fluid">
+         <a href="../index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center">CIARAN GRAVESTOCK</h1>
          <div>
            <nav>
              <ul class = "nav-bar">
                <li>
-                 <a href="about.html"><strong>About</strong></a>
+                 <a href="../about.html"><strong>About</strong></a>
                </li>
                <span class="nav-link-style">
                <li>
-                 <a href="photography.html"><strong>Photography</strong></a>
+                 <a href="../photography.html"><strong>Photography</strong></a>
                </li>
                <li>
-                 <a href="videography.html"><strong>Videography</strong></a>
+                 <a href="../videography.html"><strong>Videography</strong></a>
                </li>
                </span>
                <li>
-                 <a href="contact.html"><strong>Contact</strong></a>
+                 <a href="../contact.html"><strong>Contact</strong></a>
                </li>
              </ul>
          </nav>
@@ -45,13 +45,13 @@
               <a href="events.html"><strong>Events</strong></a>
             </li>
             <li>
-              <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
+              <a href="landscape.html"><strong>Landscape</strong></a>
             </li>
             <li>
-              <a href="sub_nav/nature.html"><strong>Nature</strong></a>
+              <a href="nature.html"><strong>Nature</strong></a>
             </li>
             <li>
-              <a href="photography.html"><strong>Widlife</strong></a>
+              <a href="../photography.html"><strong>Widlife</strong></a>
             </li>
           </ul>
         </div>
@@ -66,17 +66,47 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div>
+         <div class = "main-container">
            <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
+           <div class="row">
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-12 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" class="img-fluid mb-4" alt="">
+
+               <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.3s">
+
+             </div>
+             <!--Grid column-->
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-6 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQPjm.jpg" alt="jSQPjm.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.1s">
+
+               <img src="https://i1.lensdump.com/i/jSQotK.jpg" alt="jSQotK.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.4s">
+
+             </div>
+             <!--Grid column-->
+
+             <!--Grid column-->
+             <div class="col-lg-4 col-md-6 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQuKZ.jpg" alt="jSQuKZ.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.2s">
+
+               <img src="https://i1.lensdump.com/i/jSQDPP.jpg" alt="jSQDPP.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.5s">
+
+             </div>
+             <!--Grid column-->
+
+           </div>
          </div>
-         <div class = "row">
-           <div class = "col-md-4">
-             <img src="https://i1.lensdump.com/i/jSQfqi.jpg" alt="jSQfqi.jpg" border="0" />
-           </div>
-           <div class = "col-md-8">
-             <img src="https://i1.lensdump.com/i/jSQFMo.jpg" alt="jSQFMo.jpg" border="0" />
-           </div>
-          </div>
       </div>
     </body>
 </html>
