--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                <a href="about.html"><strong>About</strong></a>
              </li>
              <span class="nav-link-style">
-             <li>
+             <li class = "li_dot">
                <a href="photography.html"><strong>Photography</strong></a>
              </li>
-             <li>
+             <li class = "li_dot">
                <a href="videography.html"><strong>Videography</strong></a>
              </li>
              </span>
-             <li>
+             <li class = "li_dot">
                <a href="contact.html"><strong>Contact</strong></a>
              </li>
            </ul>
@@ -51,7 +51,7 @@
            </a>
          </div>
         </div>
-         <div class = "main-container">
+         <div class = "index-container">
            <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/391609990"
              style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
            </div>
