--- a/sub_nav/nature.html
+++ b/sub_nav/nature.html
@@ -16,25 +16,25 @@
       <link rel ="stylesheet" href ="../main.css">
     </head>
     <body>
-      <div class = "container">
-         <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
+      <div class = "container-fluid">
+         <a href="../index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center">CIARAN GRAVESTOCK</h1>
          <div>
            <nav>
              <ul class = "nav-bar">
                <li>
-                 <a href="about.html"><strong>About</strong></a>
+                 <a href="../about.html"><strong>About</strong></a>
                </li>
                <span class="nav-link-style">
                <li>
-                 <a href="photography.html"><strong>Photography</strong></a>
+                 <a href="../photography.html"><strong>Photography</strong></a>
                </li>
                <li>
-                 <a href="videography.html"><strong>Videography</strong></a>
+                 <a href="../videography.html"><strong>Videography</strong></a>
                </li>
                </span>
                <li>
-                 <a href="contact.html"><strong>Contact</strong></a>
+                 <a href="../contact.html"><strong>Contact</strong></a>
                </li>
              </ul>
          </nav>
@@ -45,13 +45,13 @@
               <a href="events.html"><strong>Events</strong></a>
             </li>
             <li>
-              <a href="sub_nav/landscape.html"><strong>Landscape</strong></a>
+              <a href="landscape.html"><strong>Landscape</strong></a>
             </li>
             <li>
-              <a href="sub_nav/nature.html"><strong>Nature</strong></a>
+              <a href="nature.html"><strong>Nature</strong></a>
             </li>
             <li>
-              <a href="photography.html"><strong>Widlife</strong></a>
+              <a href="../photography.html"><strong>Widlife</strong></a>
             </li>
           </ul>
         </div>
@@ -66,10 +66,33 @@
              <img src="images/LINKEDIN.png" alt="Twitter Logo" class="social-icon">
            </a>
          </div>
-         <div>
+         <div class = "main-container">
            <p class = "align-center">Capturing wildlife is always fasinating. To capture so much life within a single photo brings out some of the best creativity.</p>
-         </div>
+           <div class="row">
 
+             <!--Grid column-->
+             <div class="col-lg-6 col-md-12 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQwwC.jpg" alt="jSQwwC.jpg" class="img-fluid mb-4" alt="">
+
+               <img src="https://i1.lensdump.com/i/jSQbzv.jpg" alt="jSQbzv.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.3s">
+
+             </div>
+             <!--Grid column-->
+
+             <!--Grid column-->
+             <div class="col-lg-6 col-md-6 mb-4">
+
+               <img src="https://i1.lensdump.com/i/jSQXC2.jpg" alt="jSQXC2.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.1s">
+
+               <img src="https://i1.lensdump.com/i/jSQUh9.jpg" alt="jSQUh9.jpg" class="img-fluid mb-4" alt=""
+                 data-wow-delay="0.4s">
+
+             </div>
+           </div>
+         </div>
       </div>
     </body>
 </html>
