--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class = "container-fluid">
          <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
-         <div>
+         <div class + "align-center">
            <nav>
            <ul class = "nav-bar">
              <li>
