--- a/sub_nav/landscape.html
+++ b/sub_nav/landscape.html
@@ -26,14 +26,14 @@
                  <a href="../about.html"><strong>About</strong></a>
                </li>
                <span class="nav-link-style">
-               <li>
+               <li class = "li_dot">
                  <a href="../photography.html"><strong>Photography</strong></a>
                </li>
-               <li>
+               <li class = "li_dot">
                  <a href="../videography.html"><strong>Videography</strong></a>
                </li>
                </span>
-               <li>
+               <li class = "li_dot">
                  <a href="../contact.html"><strong>Contact</strong></a>
                </li>
              </ul>
