--- a/index.html
+++ b/index.html
@@ -13,32 +13,52 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
+      <script src="script.js"></script>
       <link rel ="stylesheet" href ="main.css">
     </head>
     <body>
       <div class = "container-fluid">
+        <div>
          <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
-         <div class + "align-center">
-           <nav>
-           <ul class = "nav-bar">
-             <li>
-               <a href="about.html"><strong>About</strong></a>
-             </li>
-             <span class="nav-link-style">
-             <li class = "li_dot">
-               <a href="photography.html"><strong>Photography</strong></a>
-             </li>
-             <li class = "li_dot">
-               <a href="videography.html"><strong>Videography</strong></a>
-             </li>
-             </span>
-             <li class = "li_dot">
-               <a href="contact.html"><strong>Contact</strong></a>
-             </li>
-           </ul>
-         </nav>
         </div>
+        <nav class="navbar navbar-expand-md ">
+          <a class="navbar-brand" href="#"></a>
+
+            <!-- Collapse button -->
+            <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
+              aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle navigation">
+              <div class="animated-icon1"><span></span><span></span><span></span></div>
+            </button>
+
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent20">
+
+              <!-- Links -->
+              <ul id = "nav-bar" class="navbar-nav mx-auto float-right text-right pr-3">
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"><strong>About</strong></a>
+                </li>
+                <span class="nav-link-style">
+                <li class="nav-item li_dot">
+                  <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
+                </li>
+                <li class="nav-item li_dot">
+                  <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
+                </li>
+              </span>
+                <li class="nav-item li_dot">
+                  <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
+                </li>
+              </ul>
+              <!-- Links -->
+
+            </div>
+            <!-- Collapsible content -->
+
+          </nav>
+          <!--/.Navbar-->
+
         <div id = "socials">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
