--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <body>
       <div class = "container-fluid">
         <div>
-         <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
+         <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
         <nav class="navbar navbar-expand-md ">
