--- a/photography.html
+++ b/photography.html
@@ -17,29 +17,48 @@
     </head>
     <body>
       <div class = "container-fluid">
+        <div>
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
-         <div>
-           <nav>
-             <ul class = "nav-bar">
-               <li>
-                 <a href="about.html"><strong>About</strong></a>
-               </li>
-               <span class="nav-link-style">
-               <li class = "li_dot">
-                 <a href="photography.html"><strong>Photography</strong></a>
-               </li>
-               <li class = "li_dot">
-                 <a href="videography.html"><strong>Videography</strong></a>
-               </li>
-               </span>
-               <li class = "li_dot">
-                 <a href="contact.html"><strong>Contact</strong></a>
-               </li>
-             </ul>
-         </nav>
         </div>
-        <div id = "sub-nav">
+        <nav class="navbar navbar-expand-md ">
+          <a class="navbar-brand" href="#"></a>
+
+            <!-- Collapse button -->
+            <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
+              aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle navigation">
+              <div class="animated-icon1"><span></span><span></span><span></span></div>
+            </button>
+
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent20">
+
+              <!-- Links -->
+              <ul id = "nav-bar" class="navbar-nav mx-auto float-right text-right pr-3">
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"><strong>About</strong></a>
+                </li>
+                <span class="nav-link-style">
+                <li class="nav-item li_dot">
+                  <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
+                </li>
+                <li class="nav-item li_dot">
+                  <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
+                </li>
+              </span>
+                <li class="nav-item li_dot">
+                  <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
+                </li>
+              </ul>
+              <!-- Links -->
+
+            </div>
+            <!-- Collapsible content -->
+
+          </nav>
+          <!--/.Navbar-->
+
+<!--        <div id = "sub-nav">
           <ul class = "nav-bar">
             <li>
               <a href="sub_nav/events.html"><strong>Events</strong></a>
@@ -55,6 +74,7 @@
             </li>
           </ul>
         </div>
+      -->
         <div id = "socials">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
