--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
          <div class = "main-container">
            <div class = "row">
              <div class = "col-md-4">
-                 <img src="https://i1.lensdump.com/i/jLeWfK.jpg" class="img-responsive" width = "100%" max-height = "100%" alt="myself.jpg" border="0" />
+                 <img src="images/frosty-1.jpg" class="img-responsive" width = "100%" max-height = "100%" alt="myself.jpg" border="0" />
              </div>
              <div class = "col-md-8">
                <p class = "para">In 2017 I first worked on a short film production as a runner. Despite making teas and coffees, feeling the working atmosphere and seeing how a final film
