--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
          <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
-        <nav class="navbar navbar-expand-md ">
+        <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
             <img src="images/logo.png" width="40" height="100%" alt="">
-            <span>CIARAN GRAVESTOCK</span>
+            <span style = "color: black;">CIARAN GRAVESTOCK</span>
           </a>
 
             <!-- Collapse button -->
@@ -44,14 +44,7 @@
                 </li>
                 <span class="nav-link-style">
                   <li class="nav-item li_dot dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <strong>Photography</strong>
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+                    <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
                 <li class="nav-item li_dot">
                   <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
                 </li>
