--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
             <img src="images/logo.png" width="40" height="100%" alt="">
-            <span style = "color: black;">CIARAN GRAVESTOCK</span>
+            <span style = "color">CIARAN GRAVESTOCK</span>
           </a>
 
             <!-- Collapse button -->
@@ -36,9 +36,7 @@
 
             <!-- Collapsible content -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent20">
-
-              <!-- Links -->
-              <ul id = "nav-bar" class="navbar-nav mx-auto float-right text-right pr-3">
+              <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"><strong>About</strong></a>
                 </li>
@@ -53,14 +51,10 @@
                   <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
                 </li>
               </ul>
-              <!-- Links -->
-
             </div>
             <!-- Collapsible content -->
 
           </nav>
-          <!--/.Navbar-->
-
         <div id = "socials">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
