--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
             <img src="images/logo.png" width="40" height="100%" alt="">
-            <span style = "color">CIARAN GRAVESTOCK</span>
+            <span style = "color: black;">CIARAN GRAVESTOCK</span>
           </a>
 
             <!-- Collapse button -->
