--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
                 </li>
                 <span class="nav-link-style">
                   <li class="nav-item li_dot dropdown">
-                    <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
+                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <strong>Photography</strong>
+                    </a>
+                    <div id ="dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <a class="dropdown-item" href="#"><strong>Events</strong></a>
+                      <a class="dropdown-item" href="#"><strong>Landscape</strong></a>
+                      <a class="dropdown-item" href="#"><strong>Portraits</strong></a>
+                      <a class="dropdown-item" href="#"><strong>Wildlife</strong></a>
+                    </div>
                 <li class="nav-item li_dot">
                   <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
                 </li>
