--- a/photography.html
+++ b/photography.html
@@ -21,10 +21,10 @@
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
-        <nav class="navbar navbar-expand-md ">
+        <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
             <img src="images/logo.png" width="40" height="100%" alt="">
-            <span>CIARAN GRAVESTOCK</span>
+            <span style = "color: black;">CIARAN GRAVESTOCK</span>
           </a>
 
             <!-- Collapse button -->
@@ -35,23 +35,29 @@
 
             <!-- Collapsible content -->
             <div class="collapse navbar-collapse" id="navbarSupportedContent20">
-
-              <!-- Links -->
-              <ul id = "nav-bar" class="navbar-nav mx-auto float-right text-right pr-3">
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"><strong>About</strong></a>
-                </li>
+              <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
+                  <li class="nav-item">
+                    <a class="nav-link" href="about.html"><strong>About</strong></a>
+                  </li>
                 <span class="nav-link-style">
-                  <li class="nav-item li_dot dropdown">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <div class = "hide-small">
+                  <li class="nav-item li_dot">
+                    <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
+                  </li>
+                </div>
+                <div class = "hide-big">
+                  <li class="nav-item dropdown">
+                    <a class="nav-link" href="photography.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <strong>Photography</strong>
                     </a>
-                    <div id ="dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                       <a class="dropdown-item" href="#"><strong>Events</strong></a>
                       <a class="dropdown-item" href="#"><strong>Landscape</strong></a>
                       <a class="dropdown-item" href="#"><strong>Portraits</strong></a>
                       <a class="dropdown-item" href="#"><strong>Wildlife</strong></a>
                     </div>
+                  </li>
+                </div>
                 <li class="nav-item li_dot">
                   <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
                 </li>
@@ -60,13 +66,9 @@
                   <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
                 </li>
               </ul>
-              <!-- Links -->
-
             </div>
             <!-- Collapsible content -->
-
           </nav>
-          <!--/.Navbar-->
 
 <!--        <div id = "sub-nav">
           <ul class = "nav-bar">
