--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <body>
       <div class = "container-fluid">
         <div id = "top-section">
-         <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
+          <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
+          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
         <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
@@ -29,39 +29,46 @@
           </a>
 
             <!-- Collapse button -->
-            <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
-              aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle navigation">
-              <div class="animated-icon1"><span></span><span></span><span></span></div>
-            </button>
+          <button class="navbar-toggler first-button" type="button" data-toggle="collapse" data-target="#navbarSupportedContent20"
+                  aria-controls="navbarSupportedContent20" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="animated-icon1"><span></span><span></span><span></span></div>
+          </button>
 
             <!-- Collapsible content -->
-            <div class="collapse navbar-collapse" id="navbarSupportedContent20">
-              <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
-                <li class="nav-item">
-                  <a class="nav-link" href="about.html"><strong>About</strong></a>
-                </li>
-                <span class="nav-link-style">
-                  <li class="nav-item li_dot dropdown">
-                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <strong>Photography</strong>
-                    </a>
-                    <div id ="dropdown" class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <a class="dropdown-item" href="#"><strong>Events</strong></a>
-                      <a class="dropdown-item" href="#"><strong>Landscape</strong></a>
-                      <a class="dropdown-item" href="#"><strong>Portraits</strong></a>
-                      <a class="dropdown-item" href="#"><strong>Wildlife</strong></a>
-                    </div>
-                <li class="nav-item li_dot">
-                  <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
-                </li>
-              </span>
-                <li class="nav-item li_dot">
-                  <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
-                </li>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent20">
+            <ul id = "nav-bar" class="navbar-nav mx-auto float-lg-none text-lg-center">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html"><strong>About</strong></a>
+              </li>
+              <span class="nav-link-style">
+                <div class = "hide-small">
+                  <li class="nav-item li_dot">
+                      <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
+                    </li>
+                  </div>
+                  <div class = "hide-big">
+                    <li class="nav-item dropdown">
+                      <a class="nav-link" href="photography.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <strong>Photography</strong>
+                      </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#"><strong>Events</strong></a>
+                        <a class="dropdown-item" href="#"><strong>Landscape</strong></a>
+                        <a class="dropdown-item" href="#"><strong>Portraits</strong></a>
+                        <a class="dropdown-item" href="#"><strong>Wildlife</strong></a>
+                      </div>
+                    </li>
+                  </div>
+                  <li class="nav-item li_dot">
+                    <a class="nav-link" href="videography.html"><strong>Videography</strong></a>
+                  </li>
+               </span>
+                  <li class="nav-item li_dot">
+                    <a class="nav-link" href='contact.html'><strong>Contact</strong></a>
+                  </li>
               </ul>
             </div>
             <!-- Collapsible content -->
-
           </nav>
         <div id = "socials">
            <a href="https://vimeo.com/user65399121" target="_blank">
