--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class = "container-fluid">
         <div id = "top-section">
           <a href="#header"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-          <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
+          <h1 class = "text-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
         <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
@@ -70,7 +70,7 @@
             </div>
             <!-- Collapsible content -->
           </nav>
-        <div id = "socials">
+        <div id = "socials" class = "text-center">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
            </a>
