--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
       <div class = "container-fluid">
         <div id = "top-section">
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
+         <h1 class = "text-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
         <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
@@ -69,7 +69,7 @@
             </div>
             <!-- Collapsible content -->
           </nav>
-        <div id = "socials">
+        <div id = "socials" class= "text-center">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
            </a>
@@ -81,9 +81,9 @@
            </a>
          </div>
          <div class = "main-container">
-           <div>
-             <p class = "align-center">Thank you for checking out my work!</p>
-             <p class = "align-center">Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the forum below or use my socials to contact.</p>
+           <div class = "text-center">
+             <p>Thank you for checking out my work!</p>
+             <p>Please feel free to reach out! I'm very happy to answer any inquiries about my <br> services and work.  Fill in the forum below or use my socials to contact.</p>
            </div>
            <div class = "row">
              <div class = "col-md-6 align-center">
