--- a/photography.html
+++ b/photography.html
@@ -19,7 +19,7 @@
       <div class = "container-fluid">
         <div id = "top-section">
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
-         <h1 class = "align-center" id = "header">CIARAN GRAVESTOCK</h1>
+         <h1 class = "text-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
         <nav class="navbar navbar-expand-md">
           <a id = "logo" class="navbar-brand" href="index.html">
@@ -87,7 +87,7 @@
           </ul>
         </div>
       -->
-        <div id = "socials">
+        <div id = "socials" class = "text-center">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
            </a>
