--- a/photography.html
+++ b/photography.html
@@ -17,7 +17,7 @@
     </head>
     <body>
       <div class = "container-fluid">
-        <div id = "top-section">
+        <div class = "hide-small">
          <a href="index.html"><img id="header-img" src="images/logo.png" alt="company-logo"></a>
          <h1 class = "text-center" id = "header">CIARAN GRAVESTOCK</h1>
         </div>
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="about.html"><strong>About</strong></a>
                   </li>
                 <span class="nav-link-style">
-                <div class = "hide-small">
+                <div class = "hide-small inline-block">
                   <li class="nav-item li_dot">
                     <a class="nav-link" href="photography.html"><strong>Photography</strong></a>
                   </li>
@@ -87,7 +87,7 @@
           </ul>
         </div>
       -->
-        <div id = "socials" class = "text-center">
+        <div id = "socials" class = "text-center hide-small">
            <a href="https://vimeo.com/user65399121" target="_blank">
              <img src="images/VIMEO.png" alt="Instagram Logo" class="social-icon">
            </a>
